--- a/mobile_order.html
+++ b/mobile_order.html
@@ -53,8 +53,10 @@
                             </table>
                             <table class="table">
                                 <tbody>
-                                    <th class="col-2">Total:</t>
-                                    <td class="col" id="total">0.00</td>
+                                    <tr id="add-place-order">
+                                        <th class="col-1" style="padding-top: 10px;">Total:</t>
+                                        <td class="col-1" id="total" style="padding-top: 10px;">0.00</td>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
