edited prior to presentation

--- a/mobile_order.html
+++ b/mobile_order.html
@@ -54,7 +54,7 @@
                             <table class="table">
                                 <tbody>
                                     <tr id="add-place-order">
-                                        <th class="col-1" style="padding-top: 10px;">Total:</t>
+                                        <th class="col-1" style="padding-top: 10px;">Total:</th>
                                         <td class="col-1" id="total" style="padding-top: 10px;">0.00</td>
                                     </tr>
                                 </tbody>
@@ -79,7 +79,7 @@
             <div class="menu container col-9 m-0 px-0" id="menu">
                 <div class="container m-0">
 
-                    <div class="container-fluid food-item mt-0 p-2 bg-light">
+                    <div class="container-fluid food -item mt-0 p-2 bg-light">
                         <h3 class="mt-2 text-center text-dark">FOOD ITEMS</h3>
                     </div>
 
@@ -94,9 +94,9 @@
                                     <img src="res/download1.jfif" class="card-img-top" alt="Food Image">
                                     <div class="card-body">
                                         <input type="text" class="food-input" value="Burger" style="display: none;">
-                                        <p class="card-text text-start">Lorem ipsum dolor sit amet</p>
+                                        <p class="card-text text-start">Burger</p>
                                         <button type="button" class="btn btn-primary text-white mt-0 mt-md-2 order-btn"
-                                            data-item="Burger">Order</button>
+                                            data-item="Burger">Add</button>
                                     </div>
                                 </div>
                             </div>
@@ -105,9 +105,9 @@
                                     <img src="res/download1.jfif" class="card-img-top" alt="Food Image">
                                     <div class="card-body">
                                         <input type="text" class="food-input" value="Pizza" style="display: none;">
-                                        <p class="card-text text-start">Lorem ipsum dolor sit amet</p>
+                                        <p class="card-text text-start">Pizza</p>
                                         <button type="button" class="btn btn-primary text-white mt-0 mt-md-2 order-btn"
-                                            data-item="Pizza">Order</button>
+                                            data-item="Pizza">Add</button>
                                     </div>
                                 </div>
                             </div>
@@ -118,9 +118,9 @@
                                     <img src="res/download1.jfif" class="card-img-top" alt="Food Image">
                                     <div class="card-body">
                                         <input type="text" class="food-input" value="Pasta" style="display: none;">
-                                        <p class="card-text text-start">Lorem ipsum dolor sit amet</p>
+                                        <p class="card-text text-start">Pasta</p>
                                         <button type="button" class="btn btn-primary text-white mt-0 mt-md-2 order-btn"
-                                            data-item="Pasta">Order</button>
+                                            data-item="Pasta">Add</button>
                                     </div>
                                 </div>
                             </div>
@@ -129,9 +129,9 @@
                                     <img src="res/download1.jfif" class="card-img-top" alt="Food Image">
                                     <div class="card-body">
                                         <input type="text" class="food-input" value="Salad" style="display: none;">
-                                        <p class="card-text text-start">Lorem ipsum dolor sit amet</p>
+                                        <p class="card-text text-start">Salad</p>
                                         <button type="button" class="btn btn-primary text-white mt-0 mt-md-2 order-btn"
-                                            data-item="Salad">Order</button>
+                                            data-item="Salad">Add</button>
                                     </div>
                                 </div>
                             </div>
@@ -150,9 +150,9 @@
                                     <img src="res/download.jfif" class="card-img-top" alt="Drink Image">
                                     <div class="card-body">
                                         <input type="text" class="food-input" value="Soda" style="display: none;">
-                                        <p class="card-text text-start">Lorem ipsum dolor sit amet</p>
+                                        <p class="card-text text-start">Soda</p>
                                         <button type="button" class="btn btn-primary text-white mt-0 mt-md-2 order-btn"
-                                            data-item="Soda">Order</button>
+                                            data-item="Soda">Add</button>
                                     </div>
                                 </div>
                             </div>
@@ -161,9 +161,9 @@
                                     <img src="res/download.jfif" class="card-img-top" alt="Drink Image">
                                     <div class="card-body">
                                         <input type="text" class="food-input" value="Juice" style="display: none;">
-                                        <p class="card-text text-start">Lorem ipsum dolor sit amet</p>
+                                        <p class="card-text text-start">Juice</p>
                                         <button type="button" class="btn btn-primary text-white mt-0 mt-md-2 order-btn"
-                                            data-item="Juice">Order</button>
+                                            data-item="Juice ">Add</button>
                                     </div>
                                 </div>
                             </div>
@@ -174,9 +174,9 @@
                                     <img src="res/download.jfif" class="card-img-top" alt="Drink Image">
                                     <div class="card-body">
                                         <input type="text" class="food-input" value="Water" style="display: none;">
-                                        <p class="card-text text-start">Lorem ipsum dolor sit amet</p>
+                                        <p class="card-text text-start">Water</p>
                                         <button type="button" class="btn btn-primary text-white mt-0 mt-md-2 order-btn"
-                                            data-item="Water">Order</button>
+                                            data-item="Water">Add</button>
                                     </div>
                                 </div>
                             </div>
@@ -185,9 +185,9 @@
                                     <img src="res/download.jfif" class="card-img-top" alt="Drink Image">
                                     <div class="card-body">
                                         <input type="text" class="food-input" value="Tea" style="display: none;">
-                                        <p class="card-text text-start">Lorem ipsum dolor sit amet</p>
+                                        <p class="card-text text-start">Tea</p>
                                         <button type="button" class="btn btn-primary text-white mt-0 mt-md-2 order-btn"
-                                            data-item="Tea">Order</button>
+                                            data-item="Tea">Add</button>
                                     </div>
                                 </div>
                             </div>
@@ -206,9 +206,9 @@
                                     <img src="res/images.jfif" class="card-img-top" alt="Dessert Image">
                                     <div class="card-body">
                                         <input type="text" class="food-input" value="Cake" style="display: none;">
-                                        <p class="card-text text-start">Lorem ipsum dolor sit amet</p>
+                                        <p class="card-text text-start">Cake</p>
                                         <button type="button" class="btn btn-primary text-white mt-0 mt-md-2 order-btn"
-                                            data-item="Cake">Order</button>
+                                            data-item="Cake">Add</button>
                                     </div>
                                 </div>
                             </div>
@@ -217,9 +217,9 @@
                                     <img src="res/images.jfif" class="card-img-top" alt="Dessert Image">
                                     <div class="card-body">
                                         <input type="text" class="food-input" value="Ice Cream" style="display: none;">
-                                        <p class="card-text text-start">Lorem ipsum dolor sit amet</p>
+                                        <p class="card-text text-start">Ice Cream</p>
                                         <button type="button" class="btn btn-primary text-white mt-0 mt-md-2 order-btn"
-                                            data-item="Ice Cream">Order</button>
+                                            data-item="Ice Cream">Add</button>
                                     </div>
                                 </div>
                             </div>
@@ -230,9 +230,9 @@
                                     <img src="res/images.jfif" class="card-img-top" alt="Dessert Image">
                                     <div class="card-body">
                                         <input type="text" class="food-input" value="Pie" style="display: none;">
-                                        <p class="card-text text-start">Lorem ipsum dolor sit amet</p>
+                                        <p class="card-text text-start">Pie</p>
                                         <button type="button" class="btn btn-primary text-white mt-0 mt-md-2 order-btn"
-                                            data-item="Pie">Order</button>
+                                            data-item="Pie">Add</button>
                                     </div>
                                 </div>
                             </div>
@@ -241,9 +241,9 @@
                                     <img src="res/images.jfif" class="card-img-top" alt="Dessert Image">
                                     <div class="card-body">
                                         <input type="text" class="food-input" value="Brownie" style="display: none;">
-                                        <p class="card-text text-start">Lorem ipsum dolor sit amet</p>
+                                        <p class="card-text text-start">Brownie</p>
                                         <button type="button" class="btn btn-primary text-white mt-0 mt-md-2 order-btn"
-                                            data-item="Brownie">Order</button>
+                                            data-item="Brownie">Add</button>
                                     </div>
                                 </div>
                             </div>
@@ -254,7 +254,7 @@
                     <!-- Category 4: Side Dish -->
                     <div class="container-fluid m-0 p-0 sec" id="list-item-4">
                         <div class="container-fluid mt-0 p-2 sticky-top bg-white">
-                            <h4 class="mt-1">Side dish</h4>
+                            <h4 class="mt- 1">Side dish</h4>
                         </div>
                         <div class="row">
                             <div class="col-md-6 col-6">
@@ -262,9 +262,9 @@
                                     <img src="res/download (1).jfif" class="card-img-top" alt="Side Dish Image">
                                     <div class="card-body">
                                         <input type="text" class="food-input" value="Fries" style="display: none;">
-                                        <p class="card-text text-start">Lorem ipsum dolor sit amet</p>
+                                        <p class="card-text text-start">Fries</p>
                                         <button type="button" class="btn btn-primary text-white mt-0 mt-md-2 order-btn"
-                                            data-item="Fries">Order</button>
+                                            data-item="Fries">Add</button>
                                     </div>
                                 </div>
                             </div>
@@ -272,11 +272,10 @@
                                 <div class="card mb-3">
                                     <img src="res/download (1).jfif" class="card-img-top" alt="Side Dish Image">
                                     <div class="card-body">
-                                        <input type="text" class="food-input" value="Onion Rings"
-                                            style="display: none;">
-                                        <p class="card-text text-start">Lorem ipsum dolor sit amet</p>
+                                        <input type="text" class="food-input" value="Onion Rings" style="display: none;">
+                                        <p class="card-text text-start">Onion Rings</p>
                                         <button type="button" class="btn btn-primary text-white mt-0 mt-md-2 order-btn"
-                                            data-item="Onion Rings">Order</button>
+                                            data-item="Onion Rings">Add</button>
                                     </div>
                                 </div>
                             </div>
@@ -286,11 +285,10 @@
                                 <div class="card mb-3">
                                     <img src="res/download (1).jfif" class="card-img-top" alt="Side Dish Image">
                                     <div class="card-body">
-                                        <input type="text" class="food-input" value="Garlic Bread"
-                                            style="display: none;">
-                                        <p class="card-text text-start">Lorem ipsum dolor sit amet</p>
+                                        <input type="text" class="food-input" value="Garlic Bread" style="display: none;">
+                                        <p class="card-text text-start">Garlic Bread</p>
                                         <button type="button" class="btn btn-primary text-white mt-0 mt-md-2 order-btn"
-                                            data-item="Garlic Bread">Order</button>
+                                            data-item="Garlic Bread">Add</button>
                                     </div>
                                 </div>
                             </div>
@@ -299,9 +297,9 @@
                                     <img src="res/download (1).jfif" class="card-img-top" alt="Side Dish Image">
                                     <div class="card-body">
                                         <input type="text" class="food-input" value="Salad" style="display: none;">
-                                        <p class="card-text text-start">Lorem ipsum dolor sit amet</p>
+                                        <p class="card-text text-start">Salad</p>
                                         <button type="button" class="btn btn-primary text-white mt-0 mt-md-2 order-btn"
-                                            data-item="Salad">Order</button>
+                                            data-item="Salad">Add</button>
                                     </div>
                                 </div>
                             </div>
